k8s/gcp/atlantis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atlantis
  labels:
    shared-gateway-access: "true"
    goldilocks.fairwinds.com/enabled: "true"
