k8s/gcp/atlantis/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlantis-route
  namespace: atlantis
spec:
  parentRefs:
  - kind: Gateway
    name: external-https-gateway
    namespace: gateway-infra
  hostnames:
    - atlantis.nishiokatest.xyz
  rules:
  - backendRefs:
    - name: atlantis
      port: 80
